# scheduler

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/actions/: telegram-notify.yml
.github/actions/notify-on-failure/: action.yml
.github/actions/telegram-notify/: action.yml
.github/workflows/: build.yml  ci-cd.yml  ci.yml  deploy.yml  lint.yml  linting.yml  notify-env-changes.yml  post-deploy-tests.yml  test.yml
requirements/: development.txt  production.txt
src/: loader.py  main.py
src/api/: Dockerfile  main.py
src/api/core/: config.py
src/api/endpoints/: __init__.py
src/api/endpoints/schemas/: root.py
src/api/endpoints/v1/: __init__.py  health.py  webhook.py
src/bot/: Dockerfile  __main__.py  exceptions.py  main.py  utils.py
src/bot/callbacks/: __init__.py  location.py  menu.py  post.py  select_channel.py  timezone.py  utils.py
src/bot/callbacks/post/: __init__.py  create.py  menu.py  schedule.py
src/bot/callbacks/process_create_post/: __init__.py  back.py  select_channel.py  send_text.py  wait_text.py
src/bot/callbacks/process_edit_post/: __init__.py  edit_post.py
src/bot/callbacks/process_settings/: __init__.py  settings.py
src/bot/celery/: __init__.py  app.py  beat_schedule.py  config.py
src/bot/core/: __init__.py  commands.py  config.py  consumer.py  enums.py  loader.py  logger.py  settings.py  storage_config.py
src/bot/core/config/: __init__.py  bot.py  config.py  db.py  env.py  log.py  sentry.py
src/bot/core/settings/: __init__.py  bot.py  db.py  env.py  log.py  sentry.py  settings.py
src/bot/db/: engine.py  models.py
src/bot/handlers/: __init__.py  admin_channels.py  echo.py  location.py  menu.py  noop.py  start.py  support.py  test.py  unhandled_message.py  utils.py
src/bot/handlers/location/: __init__.py  location_shared.py  offset_selected.py  process_offset_selection.py  request_location.py  share_location.py  utils.py
src/bot/handlers/post/: __init__.py
src/bot/handlers/settings/: __init__.py  settings.py
src/bot/keyboards/: __init__.py  default_commands.py
src/bot/keyboards/commands/: __init__.py  default.py  enums.py
src/bot/keyboards/inline/: location.py  menu.py  post.py
src/bot/middlewares/: __init__.py  auth.py  database.py  location.py  logging.py  timezone.py
src/bot/schemas/: __init__.py  location.py  menu.py  post.py
src/bot/services/bot/: __init__.py  get_channel_permissions.py
src/bot/services/user/: __init__.py  add_user.py  add_user_channel.py  find_user.py  find_user_channels.py  remove_user_channel.py
src/bot/states/: __init__.py  location.py  post.py
src/bot/states/post/: __init__.py  create.py  schedule.py
src/bot/tasks/: __init__.py  celery_app.py  send_delayed_messages.py  send_delayed_messages_task.py
src/bot/utils/messages/: __init__.py  get_message.py  make_linked.py  safe_reply.py  save_edit.py
src/bot/utils/user/: __init__.py  get_user.py  get_username.py
src/common/database/: config.py  engine.py  exceptions.py  logging.py  models.py
src/common/environment/: config.py  enums.py
src/common/logging/: config.py  enums.py  logger.py  setup.py
src/common/redis/: client.py  config.py  engine.py  enums.py
src/common/redis/decorators/: __init__.py  cache.py
src/common/schemas/: url.py
src/common/sentry/: config.py  setup.py
src/common/utils/: serializers.py
src/core/: __init__.py  config.py  logging.py
src/handlers/: __init__.py  start.py
src/logger/: __init__.py  logger.py
src/migrations/: env.py
src/migrations/versions/: 2025-04-17_added_channel_model.py  2025-04-17_init.py  2025-05-04_.py  2025-05-20_added_delayed_message.py  2025-05-20_added_delayed_message_2.py  2025-05-26_added_delayed_message.py  2025-05-27_added_to_chat_id_to_delayed_message_.py  2025-06-09_added_timezone_for_user.py  2025-06-09_updated_timezone_offset_field_for_user.py  2025-06-10_big_integer_for_channel_model_id.py
src/tests/: Dockerfile
src/tests/integration/: test_services_up.py
(+38 files in other folders)
