[project]
name = "scheduler"
version = "0.1.0"
description = "Приложение для работы с постами в телеграм-каналах"
requires-python = ">=3.13.2"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "uvloop>=0.21.0",
]

[dependency-groups]
bot = [
    "aiogram>=3.18.0",
]
dev = [
    "hupper>=1.12.1",
    "mypy>=1.15.0",
]

[tool.mypy]
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = "bot"
ignore_missing_imports = true

