[project]
name = "scheduler"
version = "0.1.0"
description = "Приложение для работы с постами в телеграм-каналах"
requires-python = ">=3.13.2"
dependencies = [
    "aiogram>=3.19.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "sentry-sdk>=2.25.1",
    "sqlalchemy>=2.0.39",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hupper>=1.12.1",
    "mypy>=1.15.0",
    "ruff>=0.11.4",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["D", "DOC", "CPY001", "ANN401", "RUF001", "RUF003"]
extend-exclude = ["migrations"]

[tool.mypy]
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[tool.black]
line-length = 120
