[project]
name = "scheduler"
version = "0.1.0"
description = "Приложение для работы с постами в телеграм-каналах"
requires-python = ">=3.13.2"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
    "redis==5",
    "sentry-sdk>=2.25.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
bot = [
    "aiogram>=3.19.0",
    "celery>=5.5.2",
    "eventlet>=0.40.0",
    "uvloop>=0.21.0",
]

api = [
    "aiogram>=3.19.0",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
]

dev = [
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]

bot-dev = [
    "hupper>=1.12.1",
]

api-dev = []

tests = [
    "httpx>=0.28.1",
    "pytest-asyncio>=0.26.0",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["I", "D", "DOC", "TD", "FIX", "CPY001", "COM812",  "ANN401", "RUF001", "RUF002", "RUF003"]
extend-exclude = ["migrations"]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = ["S101"]

[tool.mypy]
plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"
incremental = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true

[tool.isort]
profile = "black"
lines_after_imports = 2
force_sort_within_sections = true
float_to_top = true
extend_skip = ["migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
